2010-12-10	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/lib/pf/SNMP/Cisco/Catalyst_2960.pm, pf/lib/pf/SNMP/Juniper.pm,
	pf/lib/pf/SNMP/MockedSwitch.pm, pf/lib/pf/SNMP.pm, pf/lib/pf/radius.pm:
	VoIP refactoring so that RADIUS VSA's for VoIP support are determined
	by the switch modules instead of pf::radius. Also added 
	supportsRadiusVoip capability so that switch can say they support VoIP
	over RADIUS themselves.

	* pf/lib/pf/SNMP/Aruba.pm, pf/lib/pf/SNMP/HP/Controller_MSM710.pm,
	pf/lib/pf/SNMP.pm: Code to extract SSID out of RADIUS Access-Request 
	attributes has been properly distributed to AP/Controller modules.

	* Renamed pf/README_SWITCHES to pf/README.network-devices: SWITCHES
	is misleading so it's changed network-device

2010-12-09	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/lib/pf/SNMP/Juniper/EX.pm, pf/lib/pf/SNMP/Juniper.pm, 
	pf/lib/pf/SNMP.pm, pf/sbin/pfsetvlan: Juniper EX series Wired MAC 
	Authentication support without Voice over IP
	Side effects:
	- pfsetvlan now handles WIRED_MAC_AUTH properly (instead of as a failed 
	  port-security traps not enabled type)
	- Accidental inclusion of extractSsid() refactoring (will be completed
	  later)

2010-12-06	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/docs/PacketFence_Administration_Guide.odt: Changes to our default
	FreeRADIUS configuration to fix some issues with VLAN assignment over
	tunneled EAP types.
	
2010-12-06      Francois Gaudreault <fgaudreault@inverse.ca>
	* pf/lib/pf/SNMP/Meru/MC3000.pm, pr/lib/pf/SNMP/Meru.pm :
	New module to support the Meru Networks MC3000 Wireless Controler
	(Meru::MC3000)

2010-12-01	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/addons/802.1X/packetfence.pm, pf/lib/pf/WebAPI.pm, 
	pf/lib/pf/radius.pm: Now sending the whole RAD_REQUEST hash to server
	side so we can take more proper educated guess about the hardware in
	the proper pf::SNMP::.. modules. Will be used for SSID discovery and
	EAP-based MAC Authentication.